// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiContextMenu is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiContextMenu testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiContextMenu panel item can contain JSX 1`] = `
<div
  class="euiContextMenu"
>
  <div
    class="euiContextMenuPanel euiContextMenu__panel"
    tabindex="0"
  >
    <div
      class="euiPopoverTitle"
    >
      <span
        class="euiContextMenu__itemLayout"
      >
        3
      </span>
    </div>
    <div>
      <div>
        <button
          class="euiContextMenuItem"
          type="button"
        >
          <span
            class="euiContextMenu__itemLayout"
          >
            <span
              class="euiContextMenuItem__text"
            >
              <span
                style="color:tomato"
              >
                foo
              </span>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiContextMenu props panels and initialPanelId allows you to click the title button to go back to the previous panel 1`] = `
<div
  class="euiContextMenu"
  style="height: 0px;"
>
  <div
    class="euiContextMenuPanel euiContextMenu__panel"
    tabindex="0"
  >
    <button
      class="euiContextMenuPanelTitle"
      data-test-subj="contextMenuPanelTitleButton"
      type="button"
    >
      <span
        class="euiContextMenu__itemLayout"
      >
        <div
          class="euiContextMenu__icon"
          data-euiicon-type="arrowLeft"
        />
        <span
          class="euiContextMenu__text"
        >
          2
        </span>
      </span>
    </button>
    <div>
      <div>
        <div>
          2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiContextMenu props panels and initialPanelId allows you to click the title button to go back to the previous panel 2`] = `
<div
  class="euiContextMenu"
  style="height: 0px; width: 400px;"
>
  <div
    class="euiContextMenuPanel euiContextMenu__panel euiContextMenuPanel-txOutRight"
    tabindex="0"
  >
    <button
      class="euiContextMenuPanelTitle"
      data-test-subj="contextMenuPanelTitleButton"
      type="button"
    >
      <span
        class="euiContextMenu__itemLayout"
      >
        <div
          class="euiContextMenu__icon"
          data-euiicon-type="arrowLeft"
        />
        <span
          class="euiContextMenu__text"
        >
          2
        </span>
      </span>
    </button>
    <div>
      <div>
        <div>
          2
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiContextMenuPanel euiContextMenu__panel euiContextMenuPanel-txInRight"
    tabindex="0"
  >
    <button
      class="euiContextMenuPanelTitle"
      data-test-subj="contextMenuPanelTitleButton"
      type="button"
    >
      <span
        class="euiContextMenu__itemLayout"
      >
        <div
          class="euiContextMenu__icon"
          data-euiicon-type="arrowLeft"
        />
        <span
          class="euiContextMenu__text"
        >
          1
        </span>
      </span>
    </button>
    <div>
      <div>
        <button
          class="euiContextMenuItem"
          type="button"
        >
          <span
            class="euiContextMenu__itemLayout"
          >
            <span
              class="euiContextMenuItem__text"
            >
              2a
            </span>
            <div
              class="euiContextMenu__arrow"
              data-euiicon-type="arrowRight"
            />
          </span>
        </button>
        <button
          class="euiContextMenuItem"
          type="button"
        >
          <span
            class="euiContextMenu__itemLayout"
          >
            <span
              class="euiContextMenuItem__text"
            >
              2b
            </span>
            <div
              class="euiContextMenu__arrow"
              data-euiicon-type="arrowRight"
            />
          </span>
        </button>
        <button
          class="euiContextMenuItem"
          type="button"
        >
          <span
            class="euiContextMenu__itemLayout"
          >
            <span
              class="euiContextMenuItem__text"
            >
              2c
            </span>
            <div
              class="euiContextMenu__arrow"
              data-euiicon-type="arrowRight"
            />
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiContextMenu props panels and initialPanelId renders the referenced panel 1`] = `
<div
  class="euiContextMenu"
>
  <div
    class="euiContextMenuPanel euiContextMenu__panel"
    tabindex="0"
  >
    <button
      class="euiContextMenuPanelTitle"
      data-test-subj="contextMenuPanelTitleButton"
      type="button"
    >
      <span
        class="euiContextMenu__itemLayout"
      >
        <div
          class="euiContextMenu__icon"
          data-euiicon-type="arrowLeft"
        />
        <span
          class="euiContextMenu__text"
        >
          2
        </span>
      </span>
    </button>
    <div>
      <div>
        <div>
          2
        </div>
      </div>
    </div>
  </div>
</div>
`;
